--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ homepage = "https://github.com/geolonia/jp_plateau_tool"
 [dependencies]
 clap = { version = "3.2.8", features = ["derive"] }
 
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
 zip = "0.6.2"
 crossbeam = "0.8"
 num_cpus = "1.13.1"
