--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ clap = { version = "4.0", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-zip = "0.6.2"
+zip = { version = "0.6.3", default-features = false, features = [ "deflate" ] }
 crossbeam = "0.8"
 num_cpus = "1.13.1"
 quick-xml = "0.25.0"
