--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ clap = { version = "4.0", features = ["derive"] }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+geojson = "*"
 
 zip = { version = "0.6.3", default-features = false, features = [ "deflate" ] }
 crossbeam = "0.8"
